# davinci-convertor

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  README.md  go.mod  main.go  rust-toolchain.toml
.github/workflow/: release.yml
.github/workflows/: release.yml
cmd/: root.go
src/: cli.rs  config.rs  converter.rs  ffmpeg.rs  file_scanner.rs  main.rs  stats.rs  types.rs
