[package]
name = "davinci-convertor"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/VolodiaKraplich/davinci-convertor"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.59"
colored = "2"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "6"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
